// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders caterer header correctly 1`] = `
<div
  className="header"
>
  <div
    className="navbar"
  >
    <Connect(CatererHeader)
      dateType={null}
      showTime={true}
    />
  </div>
</div>
`;

exports[`Header renders correctly 1`] = `
<div
  className="header homepage"
>
  <div
    className="navbar unauth-navbar"
  >
    <React.Fragment>
      <div
        className="page-title"
      >
        <h3>
          <a
            href="/"
          >
            BOOK-A-MEAL
          </a>
        </h3>
      </div>
      <div
        className="navlinks"
      >
        <Link
          className="link"
          href="/signin"
          replace={false}
          to="/signin"
        >
          Log In
        </Link>
        <Link
          className="link"
          href="/signup"
          replace={false}
          to="/signup"
        >
          Sign Up
        </Link>
      </div>
    </React.Fragment>
  </div>
</div>
`;

exports[`Header renders unauthenticated header correctly 1`] = `
<div
  className="header unauth"
>
  <div
    className="navbar unauth-navbar"
  >
    <React.Fragment>
      <div
        className="page-title"
      >
        <h3>
          <a
            href="/"
          >
            BOOK-A-MEAL
          </a>
        </h3>
      </div>
    </React.Fragment>
  </div>
</div>
`;
